--- a/style.css
+++ b/style.css
@@ -126,3 +126,10 @@ nav ul li a
 {
     margin: 5px;
 }
+.full-footer
+{
+    height: 50px;
+    position: absolute;
+    right: 0;
+    left: 0;
+}
