--- a/style.css
+++ b/style.css
@@ -128,8 +128,12 @@ nav ul li a
 }
 .full-footer
 {
-    height: 50px;
-    position: absolute;
-    right: 0;
-    left: 0;
+    position: relative; 
+}
+.image-desc
+{
+    text-align: center;
+    font-weight: 550;
+    font-size: 1.1rem; 
+    color: #006650;
 }
